public/stylesheets/home_exposure.css
@import url('shared.css');
body {
	padding:0;
	font-family:Verdana,Arial,Helvetica,sans-serif;
	margin: 0px;
	background-color: #F0F0FF;
}

div#container {
	width: 1000px;
	margin: 0 auto;
	background-color: #DDEEDD;	/* guidance background color */
}

div#header {
	background-color: #8899AA;
	height: 100px;
	background-image: url('../images/berkeley-text.gif');
	background-repeat: no-repeat;
	position:relative; /* NEEDED so that mainmenu can be at bottom */
}

div#minimenu {
	float:right;
	padding: 5px 10px;
	color: white;
}
div#fullsearch {
	clear:right;
	float:right;
}
div#subsearch {
	clear:right;
	float:right;
}

#mainmenu a,
#submenu a {
	text-decoration: none;
	color:black;
}
div#mainmenu { 
	/* NEEDED so that mainmenu can be at bottom */
	position:absolute;
	bottom:0;
}
div#mainmenu a {
	margin:0;
	float:left;
	padding: 4px 24px;
	font-size: 12pt;
	font-weight: bold;
	border: 2px solid black;
	border-bottom: 1px solid black;
	border-left: 0;
	background-color: #AACCFF;
}
div#mainmenu a:nth-child(1) {
	border-left: 2px solid black;
}
div#mainmenu a.current {
	background-color: #CCCCBB;
}


div#main {
	width: 800px;
	float:left;
}
div#submenu {
	clear:left;
	margin: 0;
	background-color: #CCCCBB;
	border: 1px solid black;
	line-height: 22pt;
}
div#submenu a {
	padding: 5px 20px;
}
div#submenu a.current {
	font-weight:bold;
}

div#content_wrapper {
	background-color:white;
	border-right: 1px solid silver;
	border-left: 1px solid silver;
}
div#content {
	padding: 5px 25px;
	font-size: 10pt;
}

div#preview {
	margin-top: 20px;
	border-top: 1px solid silver;
}
div.section {
	border-right: 1px solid silver;
	float:left;
	width: 33.1%;
	text-align:center;
}
div.section:last-child {
	border-right: 0;
}
div.section h4 {
	margin: 10px;
	padding-bottom:5px;
	border-bottom:1px solid silver;
}
div.section table {
	float:left;
	width:100%;
}

div#guidance {
	width: 180px;
	float:right;
	text-align:justify;

	/* NOT PADDING-BOTTOM */
	padding:9px;
	/* column hack override */
	padding-bottom: 32767px;
	/* smaller to put some real padding on bottom */
	margin-bottom: -32740px;
	font-size: 10pt;
}

#footer {
	clear:both;
	padding-top: 1ex;
	padding-bottom: 1ex;
	text-align:center;
	font-size:8pt;
	line-height:8pt;
	background-color: #EEE;
	color: gray;
}

